tests/compile-fail/lru_can_not_be_used_with_specify.stderr
error: the `specify` and `lru` options cannot be used together
 --> tests/compile-fail/lru_can_not_be_used_with_specify.rs:6:27
  |
6 | #[salsa::tracked(lru = 3, specify)]
  |                           ^^^^^^^
